# ldraw-validator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.agent/rules/: rules.md
docs/: architecture.md  prd.md  testing_strategy.md
scripts/: build_catalog.py  debug_connection.py  debug_imports.py  download_part_images.py  generate_test_data.py  restore_image_metadata.py  scan_ldraw_categories.py  scrape_omr.py  test_catalog_loading.py  test_invalid_only.py  test_loader.py  test_mpd.py  test_rendering.py  test_scene_graph.py  test_valid_only.py  validate.py  validate_moc.py  verify_phase0.py  visualize_tests.py
src/validator/: __init__.py  catalog.py  catalog_db.py  checks.py  collision.py  config.py  connections.py  geometry.py  grounding.py  loader.py  parser.py  renderer.py  scene_graph.py  shadow_parser.py
test_data/: manifest.json  mpd_test.ldr
test_data/edge_cases/: 3.1_tile_on_brick.ldr  3.2_ten_brick_stack.ldr  3.3_branching_structure.ldr  3.4_single_stud_connection.ldr  4.1_mpd_rotated_submodel.ldr  4.2_mpd_collision_in_submodel.ldr  4.3_mpd_floating_in_submodel.ldr
test_data/invalid/: 2.10_near_grid_miss.ldr  2.1_floating_brick.ldr  2.2_floating_assembly.ldr  2.3_collision___identical_positions.ldr  2.4_collision___partial_intersection.ldr  2.5_near_miss.ldr  2.6_gap_between_bricks.ldr  2.7_vertical_intersection.ldr  (+2 more)
tests/: conftest.py  test_catalog.py  test_collision.py  test_connections.py  test_grounding.py  test_integration.py  test_parser.py  test_renderer.py  test_scene_graph.py  test_shadow_parser.py
web/: app.py
(+13 files in other folders)
