[project]
name = "ldraw-validator"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pytest",
    "requests",
    "beautifulsoup4",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"